matrixRTC: Allow to configure with existing keys.yaml

--- a/charts/matrix-stack/ci/fragments/matrix-rtc-secrets-in-helm.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-rtc-secrets-in-helm.yaml
@@ -5,11 +5,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 matrixRTC:
-  livekitKey:
-    secret: "{{ $.Release.Name }}-matrix-rtc-external"
-    secretKey: livekitKey
-  livekitSecret:
-    secret: "{{ $.Release.Name }}-matrix-rtc-external"
-    secretKey: livekitSecret
-
-
+  livekitAuth:
+    key: CHANGEME-oolahd9xooshohSh5IeQu1natheur1oo
+    secret:
+      value: CHANGEME-gohseengahch9pheedi5OomeHea6maem
