--- a/charts/matrix-stack/ci/matrix-rtc-external-livekit-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/matrix-rtc-external-livekit-secrets-in-helm-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 #
-# source_fragments: matrix-rtc-minimal.yaml matrix-rtc-secrets-externally.yaml
+# source_fragments: matrix-rtc-minimal.yaml matrix-rtc-external-livekit.yaml matrix-rtc-external-livekit-secrets-in-helm.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres don't have any required properties to be set and defaults to enabled
@@ -11,13 +11,17 @@ elementWeb:
 matrixAuthenticationService:
   enabled: false
 matrixRTC:
+  extraEnv:
+    - name: LIVEKIT_URL
+      value: wss://demo.livekit.cloud
   ingress:
     host: mrtc.ess.localhost
   livekitAuth:
-    key: CHANGEME-oolahd9xooshohSh5IeQu1natheur1oo
-    secret:
-      secret: '{{ $.Release.Name }}-matrix-rtc-external'
-      secretKey: livekitSecret
+    keysYaml:
+      value: |
+        CHANGEME-ooShei6Aebe0mesheicooCoo8Juuceke: CHANGEME-deiv8au0poecheamusohZe7Fil9pogu4
+  sfu:
+    enabled: false
 synapse:
   enabled: false
 wellKnownDelegation:
