--- a/charts/matrix-stack/ci/matrix-rtc-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/matrix-rtc-secrets-in-helm-values.yaml
@@ -13,12 +13,10 @@ matrixAuthenticationService:
 matrixRTC:
   ingress:
     host: mrtc.ess.localhost
-  livekitKey:
-    secret: '{{ $.Release.Name }}-matrix-rtc-external'
-    secretKey: livekitKey
-  livekitSecret:
-    secret: '{{ $.Release.Name }}-matrix-rtc-external'
-    secretKey: livekitSecret
+  livekitAuth:
+    key: CHANGEME-oolahd9xooshohSh5IeQu1natheur1oo
+    secret:
+      value: CHANGEME-gohseengahch9pheedi5OomeHea6maem
 synapse:
   enabled: false
 wellKnownDelegation:
