--- a/charts/matrix-stack/templates/matrix-rtc/sfu_configmap.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_configmap.yaml
@@ -18,8 +18,10 @@ metadata:
 data:
   config.yaml: |
     {{- tpl ($.Files.Get "configs/matrix-rtc/sfu/config.yaml.tpl") (dict "root" $ "context" .) | nindent 4 }}
+{{- if not ($.Values.matrixRTC.livekitAuth).keysYaml }}
   keys-template.yaml: |
     ${LIVEKIT_KEY}: ${LIVEKIT_SECRET}
+{{- end -}}
 {{- end -}}
 {{- end -}}
 {{- end -}}
