--- a/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_secret.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_secret.yaml
@@ -15,17 +15,24 @@ metadata:
     {{- include "element-io.matrix-rtc-sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
 type: Opaque
 data:
-{{- with .livekitKey }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixRTC.livekitKey" "initIfAbsent" true)) }}
-{{- with .value }}
-  LIVEKIT_KEY: {{ . | b64enc }}
+{{- if not .keysYaml }}
+  {{- if $.Values.matrixRTC.sfu.enabled -}}
+    {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixRTC.livekitAuth.secret" "initIfAbsent" true)) }}
+  {{- end }}
+{{- else }}
+  {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixRTC.livekitAuth.keysYaml" "initIfAbsent" false)) }}
 {{- end }}
-{{- end }}
-{{- with .livekitSecret }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixRTC.livekitSecret" "initIfAbsent" true)) }}
-{{- with .value }}
+{{- with .livekitAuth -}}
+  {{- with .keysYaml }}
+    {{- with .value }}
+  LIVEKIT_KEYS_YAML: {{ . | b64enc }}
+    {{- end -}}
+  {{- end -}}
+  {{- with .secret }}
+    {{- with .value }}
   LIVEKIT_SECRET: {{ . | b64enc }}
-{{- end -}}
+    {{- end -}}
+  {{- end -}}
 {{- end -}}
 {{- end -}}
 {{- end -}}
