--- a/charts/matrix-stack/ci/fragments/matrix-rtc-external-livekit-secrets-externally.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-rtc-external-livekit-secrets-externally.yaml
@@ -1,11 +1,11 @@
 
+
 # Copyright 2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 
 matrixRTC:
   livekitAuth:
-    key: CHANGEME-oolahd9xooshohSh5IeQu1natheur1oo
-    secret:
+    keysYaml:
       secret: "{{ $.Release.Name }}-matrix-rtc-external"
-      secretKey: livekitSecret
+      secretKey: keys.yaml
