test and fix exposed services

--- a/charts/matrix-stack/templates/matrix-rtc/sfu_deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_deployment.yaml
@@ -157,12 +157,12 @@ spec:
   {{- if .enabled }}
     {{- $portType := .type -}}
     {{- with .portRange }}
-    {{- range $port := seq .startPort .endPort  }}
-          - containerPort: {{ $port }}
-            name: rtc-udp-{{ $port }}
-            protocol: UDP
-      {{ if eq .type "HostPort" }}
-            hostPort: {{ $port }}
+    {{- range $port := untilStep (.startPort | int) (.endPort | int) 1 }}
+        - containerPort: {{ $port }}
+          name: rtc-udp-{{ $port }}
+          protocol: UDP
+      {{ if eq $portType "HostPort" }}
+          hostPort: {{ $port }}
       {{- end }}
     {{- end }}
     {{- end }}
