--- a/charts/matrix-stack/ci/pytest-element-web-values.yaml
+++ b/charts/matrix-stack/ci/pytest-element-web-values.yaml
@@ -15,16 +15,9 @@ elementWeb:
             "base_url": "https://synapse.{{ $.Values.serverName }}"
           }
         },
-        "element_call": {
-          "url": "https://mrtc.{{ $.Values.serverName }}",
-          "use_exclusively": true
+        "some_key": {
+          "some_value": "https://test.{{ $.Values.serverName }}",
         },
-        "features": {
-          "feature_video_rooms": true,
-          "feature_group_calls": true,
-          "feature_new_room_decoration_ui": true,
-          "feature_element_call_video_rooms": true
-        }
       }
   annotations:
     has-no-service-monitor: "true"
