--- a/charts/matrix-stack/ci/quick-setup-certificates-pg-external-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-certificates-pg-external-values.yaml
@@ -24,6 +24,9 @@ matrixAuthenticationService:
     user: your-matrix-auth-service-user
 matrixRTC:
   enabled: false
+  ingress:
+    host: mrtc.your.tld
+    tlsSecret: ess-auth-certificate
 serverName: your.tld
 synapse:
   ingress:
