--- a/charts/matrix-stack/ci/quick-setup-certificates-pg-with-helm-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-certificates-pg-with-helm-values.yaml
@@ -16,6 +16,9 @@ matrixAuthenticationService:
     tlsSecret: ess-auth-certificate
 matrixRTC:
   enabled: false
+  ingress:
+    host: mrtc.your.tld
+    tlsSecret: ess-auth-certificate
 serverName: your.tld
 synapse:
   ingress:
