--- a/charts/matrix-stack/ci/fragments/quick-setup-certificates.yaml
+++ b/charts/matrix-stack/ci/fragments/quick-setup-certificates.yaml
@@ -10,6 +10,10 @@ matrixAuthenticationService:
   ingress:
     tlsSecret: ess-auth-certificate
 
+matrixRTC:
+  ingress:
+    tlsSecret: ess-auth-certificate
+
 synapse:
   ingress:
     tlsSecret: ess-matrix-certificate
