--- a/charts/matrix-stack/ci/quick-setup-external-cert-pg-external-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-external-cert-pg-external-values.yaml
@@ -24,6 +24,8 @@ matrixAuthenticationService:
     user: your-matrix-auth-service-user
 matrixRTC:
   enabled: false
+  ingress:
+    host: mrtc.your.tld
 serverName: your.tld
 synapse:
   ingress:
