ci: fix checkov run skipping helm templates

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -94,7 +94,12 @@ jobs:
         export HELM_NAMESPACE=ess
         for checkov_values in charts/matrix-stack/ci/*checkov*values.yaml; do
           echo "Testing matrix-stack with $checkov_values";
-          checkov -d "charts/matrix-stack" --framework helm --var-file "$checkov_values" --quiet
+          mkdir checkov-tmp
+          cd checkov-tmp
+          helm template checkov -f "../$checkov_values" ../charts/matrix-stack | sed 's/{{//' | yq -s '.kind + "-" + .metadata.name'
+          checkov -d . --quiet
+          cd -
+          rm -rf checkov-tmp
         done
 
     - name: Run our manifest tests
