fix postgres checkov annotations

--- a/charts/matrix-stack/ci/fragments/postgres-checkov.yaml
+++ b/charts/matrix-stack/ci/fragments/postgres-checkov.yaml
@@ -8,3 +8,4 @@ postgres:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
     checkov.io/skip2: CKV_K8S_43=No digests
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
+    checkov.io/skip4: CKV_SECRET_6=Postgres annotations hash are triggering CKV_SECRET_6.
