--- a/charts/matrix-stack/ci/fragments/matrix-rtc-checkov.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-rtc-checkov.yaml
@@ -7,3 +7,8 @@ matrixRTC:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
     checkov.io/skip2: CKV_K8S_43=No digests
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
+  sfu:
+    annotations:
+      checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
+      checkov.io/skip2: CKV_K8S_43=No digests
+      checkov.io/skip3: CKV2_K8S_6=No network policy yet
