only call checkov against 1 value file

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -90,8 +90,10 @@ jobs:
 
     - name: Run checkov
       run: |
-        bash scripts/checkov.sh
-
+        checkov --version
+        for checkov_values in charts/matrix-stack/ci/*checkov*values.yaml; do
+          bash scripts/checkov.sh $checkov_values
+        done
 
     - name: Run our manifest tests
       run: poetry run pytest -vv tests/manifests
