--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -92,7 +92,7 @@ jobs:
       run: |
         checkov --version
         for checkov_values in charts/matrix-stack/ci/*checkov*values.yaml; do
-          bash scripts/checkov.sh $checkov_values
+          bash scripts/checkov.sh "$checkov_values"
         done
 
     - name: Run our manifest tests
