--- a/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_secret.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_secret.yaml
@@ -9,10 +9,10 @@ SPDX-License-Identifier: AGPL-3.0-only
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ $.Release.Name }}-matrix-rtc-sfu-jwt
+  name: {{ $.Release.Name }}-matrix-rtc-authorizer
   namespace: {{ $.Release.Namespace }}
   labels:
-    {{- include "element-io.matrix-rtc-sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.matrix-rtc-authorizer.labels" (dict "root" $ "context" .) | nindent 4 }}
 type: Opaque
 data:
 {{- if not .keysYaml }}
