--- a/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_serviceaccount.yaml
@@ -6,6 +6,6 @@ SPDX-License-Identifier: AGPL-3.0-only
 
 {{- with $.Values.matrixRTC -}}
 {{- if .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "matrix-rtc-sfu-jwt")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "matrix-rtc-authorizer")) }}
 {{- end -}}
 {{- end -}}
