--- a/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_service.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_service.yaml
@@ -10,8 +10,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.matrix-rtc-sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-matrix-rtc-sfu-jwt
+    {{- include "element-io.matrix-rtc-authorizer.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-matrix-rtc-authorizer
   namespace: {{ $.Release.Namespace }}
 spec:
   type: ClusterIP
@@ -20,6 +20,6 @@ spec:
     port: 8080
     targetPort: http
   selector:
-    app.kubernetes.io/instance: "{{ $.Release.Name }}-matrix-rtc-sfu-jwt"
+    app.kubernetes.io/instance: "{{ $.Release.Name }}-matrix-rtc-authorizer"
 {{- end -}}
 {{- end -}}
