--- a/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_service_monitor.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_service_monitor.yaml
@@ -12,8 +12,8 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{- include "element-io.matrix-rtc-sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-matrix-rtc-sfu-jwt
+    {{- include "element-io.matrix-rtc-authorizer.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-matrix-rtc-authorizer
   namespace: {{ $.Release.Namespace }}
 spec:
   endpoints:
@@ -23,7 +23,7 @@ spec:
     matchLabels:
       app.kubernetes.io/part-of: matrix-stack
       app.kubernetes.io/component: matrix-rtc-authorizer
-      app.kubernetes.io/instance: {{ $.Release.Name }}-matrix-rtc-sfu-jwt
+      app.kubernetes.io/instance: {{ $.Release.Name }}-matrix-rtc-authorizer
 {{- end }}
 {{- end }}
 {{- end -}}
