--- a/charts/matrix-stack/templates/haproxy/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/haproxy/serviceaccount.yaml
@@ -6,6 +6,6 @@ SPDX-License-Identifier: AGPL-3.0-only
 
 {{- if or $.Values.synapse.enabled $.Values.wellKnownDelegation.enabled -}}
 {{- with .Values.haproxy -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "haproxy")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "nameSuffix" "haproxy")) }}
 {{- end -}}
 {{- end -}}
