--- a/charts/matrix-stack/templates/synapse/redis_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/redis_serviceaccount.yaml
@@ -8,7 +8,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 {{- if .enabled -}}
 {{- if (include "element-io.synapse.enabledWorkers" (dict "root" $)) | fromJson }}
 {{- with .redis -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "synapse-redis")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "nameSuffix" "synapse-redis")) }}
 {{- end }}
 {{- end -}}
 {{- end -}}
