--- a/charts/matrix-stack/templates/element-web/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/element-web/serviceaccount.yaml
@@ -5,6 +5,6 @@ SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 {{- with .Values.elementWeb -}}
 {{- if .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "element-web")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "nameSuffix" "element-web")) }}
 {{- end }}
 {{- end }}
