--- a/charts/matrix-stack/templates/matrix-authentication-service/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/serviceaccount.yaml
@@ -5,6 +5,6 @@ SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 {{- with .Values.matrixAuthenticationService -}}
 {{- if .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "matrix-authentication-service")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "nameSuffix" "matrix-authentication-service")) }}
 {{- end }}
 {{- end }}
