--- a/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_deployment.yaml
@@ -40,7 +40,7 @@ spec:
       hostAliases:
         {{- tpl (toYaml . | nindent 8) $ }}
 {{- end }}
-{{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "key" "matrix-rtc-authorizer" "deployment" true)) | nindent 6 }}
+{{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "instanceSuffix" "matrix-rtc-authorizer" "deployment" true)) | nindent 6 }}
       containers:
       - name: authorizer
 {{- with .image -}}
