--- a/charts/matrix-stack/templates/matrix-rtc/sfu_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_serviceaccount.yaml
@@ -8,7 +8,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 {{- if .enabled -}}
 {{- with .sfu -}}
 {{- if .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "matrix-rtc-sfu")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "nameSuffix" "matrix-rtc-sfu")) }}
 {{- end -}}
 {{- end -}}
 {{- end -}}
