--- a/charts/matrix-stack/templates/postgres/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/postgres/serviceaccount.yaml
@@ -5,6 +5,6 @@ SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 {{- with $.Values.postgres -}}
 {{- if (include "element-io.postgres.enabled" (dict "root" $)) }}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "postgres")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "nameSuffix" "postgres")) }}
 {{- end }}
 {{- end }}
