--- a/charts/matrix-stack/templates/synapse/synapse_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_serviceaccount.yaml
@@ -6,6 +6,6 @@ SPDX-License-Identifier: AGPL-3.0-only
 
 {{- with $.Values.synapse -}}
 {{- if .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "synapse")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "nameSuffix" "synapse")) }}
 {{- end -}}
 {{- end -}}
