--- a/charts/matrix-stack/templates/synapse/synapse_serviceaccount_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_serviceaccount_hook.yaml
@@ -8,7 +8,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 {{- if .enabled }}
 {{- with .checkConfigHook }}
 {{ if and .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "synapse-check-config-hook" "extraAnnotations" (dict "helm.sh/hook" "pre-install,pre-upgrade" "helm.sh/hook-weight" "0"))) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "nameSuffix" "synapse-check-config-hook" "extraAnnotations" (dict "helm.sh/hook" "pre-install,pre-upgrade" "helm.sh/hook-weight" "0"))) }}
 {{- end -}}
 {{- end -}}
 {{- end -}}
