--- a/charts/matrix-stack/ci/fragments/matrix-authentication-service-auth-synapse.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-authentication-service-auth-synapse.yaml
@@ -3,4 +3,4 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 matrixAuthenticationService:
-  keepAuthOnSynapse: true
+  preMigrationSynapseHandlesAuth: true
