--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -1025,8 +1025,10 @@ matrixAuthenticationService:
     pullSecrets: []
 
   ## Force the authentication to happen with legacy authentication.
-  ## Use this while migrating from legacy authentication.
-  keepAuthOnSynapse: false
+  ## This can be used to deploy Matrix Authentication Service and keeping auth on Synapse.
+  ## Once MAS is deployed, you can run the syn2mas tool to migrate the data from Synapse to MAS.
+  ## This should be set back to false and never switch again after the migration to MAS has been run.
+  preMigrationSynapseHandlesAuth: false
 
 
   ## Details of the Postgres Database to use
