--- a/charts/matrix-stack/templates/element-web/configmap.yaml
+++ b/charts/matrix-stack/templates/element-web/configmap.yaml
@@ -14,6 +14,6 @@ metadata:
   namespace: {{ $.Release.Namespace }}
 data:
   config.json: |-
-    {{- include "element-io.element-web.config" (dict "root" $ "context" .) | nindent 4 }}
+    {{- (tpl ($.Files.Get "configs/element-web/config.json.tpl") (dict "root" $ "context" .)) | nindent 4 }}
 {{- end -}}
 {{- end -}}
