element-web: use helpers for configmap data

--- a/charts/matrix-stack/templates/element-web/nginx_configmap.yaml
+++ b/charts/matrix-stack/templates/element-web/nginx_configmap.yaml
@@ -13,18 +13,6 @@ metadata:
   name: {{ $.Release.Name }}-element-web-nginx
   namespace: {{ $.Release.Namespace }}
 data:
-  default.conf: |-
-    {{- ($.Files.Get "configs/element-web/default.conf") | nindent 4 }}
-
-  # Customisations that we do at the http rather than the server level
-  http_customisations.conf: |-
-    {{- ($.Files.Get "configs/element-web/http_customisations.conf") | nindent 4 }}
-
-  # For repeated inclusion in default.conf because the add_header directives need to be repeated as per
-  # https://nginx.org/en/docs/http/ngx_http_headers_module.html#add_header as they are only inherited from
-  # the server block iff there's no add_header directives in the location block
-  security_headers.conf: |-
-    {{- ($.Files.Get "configs/element-web/security_headers.conf") | nindent 4 }}
-
+  {{- include "element-io.element-web.nginx-configmap-data" (dict "root" $) | nindent 4 -}}
 {{- end }}
 {{- end }}
