--- a/charts/matrix-stack/templates/element-web/deployment.yaml
+++ b/charts/matrix-stack/templates/element-web/deployment.yaml
@@ -30,10 +30,8 @@ spec:
     metadata:
       labels:
         {{- include "element-io.element-web.labels" (dict "root" $ "context" (dict "image" .image "labels" .labels "withChartVersion" false)) | nindent 8 }}
-        k8s.element.io/confighash: "{{( tpl ($.Files.Get "configs/element-web/config.json.tpl") (dict "root" $ "context" .)) | sha1sum }}"
-        k8s.element.io/nginxhash: "{{ (cat ($.Files.Get "configs/element-web/default.conf")
-                                            ($.Files.Get "configs/element-web/http_customisations.conf")
-                                            ($.Files.Get "configs/element-web/security_headers.conf"))  | sha1sum }}"
+        k8s.element.io/confighash: "{{( include "element-io.element-web.configmap-data" (dict "root" $ "context" .)) | sha1sum }}"
+        k8s.element.io/nginxhash: "{{ include "element-io.element-web.nginx-configmap-data" (dict "root" $) | sha1sum }}"
 {{- with .annotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
