postgres: use helpers for configs data, drop chart version from pod labels

--- a/charts/matrix-stack/templates/postgres/configmap.yaml
+++ b/charts/matrix-stack/templates/postgres/configmap.yaml
@@ -14,38 +14,6 @@ metadata:
   name: {{ $.Release.Name }}-postgres
   namespace: {{ $.Release.Namespace }}
 data:
-  configure-dbs.sh: |
-    #!/bin/sh
-    set -e;
-    export POSTGRES_PASSWORD=`cat /secrets/{{
-        include "element-io.ess-library.init-secret-path" (
-      dict "root" $ "context" (
-        dict "secretPath" "postgres.adminPassword"
-             "initSecretKey" "POSTGRES_ADMIN_PASSWORD"
-             "defaultSecretName" (include "element-io.postgres.secret-name" (dict "root" $ "context"  (dict "isHook" false)))
-             "defaultSecretKey" "ADMIN_PASSWORD"
-        )
-    ) }}`;
-{{- range $key := (.essPasswords | keys | uniq | sortAlpha) -}}
-{{- if (index $.Values $key).enabled -}}
-{{- $prop := index $.Values.postgres.essPasswords $key }}
-    export ESS_PASSWORD=`cat /secrets/{{
-  include "element-io.ess-library.init-secret-path" (
-    dict "root" $ "context" (
-      dict "secretPath" (printf "postgres.essPasswords.%s" $key)
-           "initSecretKey" (printf "POSTGRES_%s_PASSWORD" ($key | upper))
-           "defaultSecretName" (include "element-io.postgres.secret-name" (dict "root" $ "context"  (dict "isHook" false)))
-           "defaultSecretKey" (printf "ESS_PASSWORD_%s" ($key | upper))
-      )
-    ) }}`;
-    (
-      (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -tc "SELECT 1 FROM pg_catalog.pg_roles WHERE rolname = '{{ $key | lower }}_user'" | grep -q 1) && \
-      (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -c "ALTER USER {{ $key | lower }}_user PASSWORD '"$ESS_PASSWORD"'")
-    ) || \
-      (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -c "CREATE ROLE {{ $key | lower }}_user LOGIN PASSWORD '"$ESS_PASSWORD"'");
-    (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = '{{ $key | lower }}'" | grep -q 1) || \
-    (echo -n $POSTGRES_PASSWORD | createdb --encoding=UTF8 --locale=C --template=template0 --owner={{ $key | lower }}_user {{ $key | lower }} -U postgres)
-{{- end }}
-{{- end }}
+  {{- include "element-io.postgres.configmap-data" (dict "root" $ "context" .) | nindent 2 }}
 {{- end -}}
 {{- end -}}
